[package]
name = "auction-house-v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.14"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
spl-associated-token-account = {version = "1.1.1", features = ["no-entrypoint"]}
mpl-token-metadata = { version="1.7", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arrayref = "0.3.6"

[dev-dependencies]
anchor-client = "0.26.0"
shellexpand = "2.1.2"
serde_json = "1.0"
solana-program = "1.14"
solana-program-test = "1.14"
solana-sdk = "1.14"
env_logger="0.9.3"